--- a/习题/习题6/习题6.md
+++ b/习题/习题6/习题6.md
@@ -24,6 +24,18 @@ student1.major = "计算机"
 ```
 答案：计算机
 # 3.定义一个客户类Client，包括名字、年龄、所在城市3种属性；在类中定义两个方法：一个方法输出客户的基本信息；另一个方法用时间和商品名称作为参数，输出客户的消费信息。编写代码，测试所定义类的功能。
+答案：
 ```python
-
+class Client():
+    def __init__(self,name,age,location):
+        self.name=name
+        self.age=age
+        self.location=location
+    def print(self):
+        print(f"客户{self.name}的年龄是{self.age}，他所在城市为{self.location}。")
+    def trade(self,time,trade_name):
+        print(f"客户{self.name}在{time}时消费了{trade_name}。")
+Client_0=Client("甲",18,"深圳")
+Client_0.print()
+Client_0.trade("2024年6月9日","手机")
 ```
